# Rengine

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
editor/: CMakeLists.txt
editor/src/: EditorApp.cpp  main.cpp
editor/src/UI/UI_CONTROL/: Layer.h  LayerStack.h
engine/: CMakeLists.txt
engine/configs/: example.config  example.json
engine/include/: Rengine.h  pch.h
engine/include/Rengine/: ResourceManager.h  engine.h
engine/include/Rengine/EntryPoint/: Entrypoint.h
engine/include/Rengine/RenderingApi/: RenderApi.h
engine/include/Rengine/Resources/: Log.h  ResourceLoader.h  ResourceMacros.h  ResourceManager.h  Resources.h  Types.h  Window.h
engine/include/Rengine/Resources/FinalTypes/Config/: ConfigManager.h
engine/include/Rengine/Resources/Types/: Log.h  Logger.h  Renderer.h  Window.h
engine/include/Rengine/SettingsManager/: ConfigManager.h  RenderSettings.h
engine/include/Rengine/Utilities/: FileManager.h  LOG.h  StringOperations.h  Timer.h  Utilities.h
engine/src/: EntryPoint.cpp  engine.cpp
engine/src/RenderingApi/VulkanApi/: VkLogicalDevice.cpp  VkLogicalDevice.h  VkManager.cpp  VkManager.h  VkPhysicalDevice.cpp  VkPhysicalDevice.h  VkQueueFamily.cpp  VkQueueFamily.h  VkSurface.cpp  VkSwapChain.cpp  VulkanDefinitions.h
engine/src/Resources/: Resources.cpp  Types.h
engine/src/Resources/Logger/: ColoredConsoleLogger.cpp  ColoredConsoleLogger.h  ConsoleLogger.cpp  ConsoleLogger.h
engine/src/Resources/Renderer/VulkanRenderer/: VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererSettings.h
engine/src/Resources/Renderer/VulkanRenderer/VulkanApi/: VkLogicalDevice.cpp  VkLogicalDevice.h  VkManager.cpp  VkManager.h  VkPhysicalDevice.cpp  VkPhysicalDevice.h  VkSurface.cpp  VkSurface.h  VkSwapChain.cpp  VkSwapChain.h  VulkanDefinitions.h
engine/src/Resources/Window/: GLFW_window.cpp  GLFW_window.h
engine/src/Resources/log/: ColoredConsoleLogger.cpp  ColoredConsoleLogger.h  ConsoleLog.cpp  ConsoleLog.h  ConsoleLogger.cpp  ConsoleLogger.h
engine/src/Resources/window/: GLFW_Window.cpp  GLFW_Window.h  GLFW_window.cpp  GLFW_window.h
engine/src/SettingsManager/: ConfigManager.cpp
engine/src/Utilities/: FileManager.cpp  LOG.cpp  StringOperations.cpp
